# Geometric_Kernal_Algorithm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
adapters/weather_min/: README.md  run_weather_min.py
docs/: api_reference.md  calibration.md  dataset_spec.md  invariants.md  null_tests.md  theory_mapping.md
docs/datasets/: weather.md
examples/em_resonator/: em_config.yaml  prepare_em_dataset.py  run_em_demo.sh
examples/josephson/: jj_config.yaml  prepare_jj_dataset.py  run_jj_demo.sh
examples/oam_images/: oam_config.yaml  prepare_oam_dataset.py  run_oam_demo.sh
examples/weather_era5/: prepare_weather_dataset.py  run_weather_demo.sh  weather_config.yaml
examples/weather_minipilot/: README.md  config.yaml  prepare_minipilot.py  run_minipilot.sh
examples/weather_real_minipilot/: README.md  build_tiles.py  compare_calibration_ab.py  (+10 more)
scripts/: export_results_bundle.sh  gka_repro_audit.sh  gka_smoke_test.sh
tests/: test_audit.py  test_blind_model.py  test_bootstrap.py  test_calibration_split.py  test_diagnostics.py  test_eigen_stability.py  test_external_ibtracs.py  test_forbidden_middle_reasons.py  test_impedance.py  test_knee.py  test_knee_posterior.py  test_ops_polar.py  test_parity.py  test_scaling.py  test_schema.py  test_stability.py  test_stress_suite.py  test_synthetic_generator.py  test_synthetic_suite.py  test_threshold_calibration.py  test_weather_adapter_mirror.py  test_weather_ibtracs.py  test_weather_minipilot_eval.py  test_weather_polar.py  test_weather_vortex.py
(+125 files in other folders)
